feat: 修复package.json中react版本问题

--- a/{{cookiecutter.project_slug}}/frontend/package.json
+++ b/{{cookiecutter.project_slug}}/frontend/package.json
@@ -2,41 +2,16 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.3",
-    "@types/node": "^20.4.2",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.0",
-    "axios": "^0.21.4",
-    "ra-data-json-server": "^4.12.2",
-    "ra-data-simple-rest": "^4.12.2",
-    "react": "^17.0.2",
-    "react-admin": "^4.12.3",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.1",
-    "typescript": "^5.1.6",
-    "web-vitals": "^3.4.0"
-  },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
     "eject": "react-scripts eject",
     "format": "prettier src --write",
-    "run-e2e-tests": "cypress run",
+    "genapi": "openapi-generator-cli generate -i 'http://localhost:{{ cookiecutter.backend_port }}/api/v1/openapi.json' -g typescript-axios -o src/generated -p withSeparateModelsAndApi=true,apiPackage=api,modelPackage=models,useSingleRequestParameter=true",
     "open-e2e-test": "cypress open",
-    "genapi": "openapi-generator-cli generate -i 'http://localhost:{{ cookiecutter.backend_port }}/api/v1/openapi.json' -g typescript-axios -o src/generated -p withSeparateModelsAndApi=true,apiPackage=api,modelPackage=models,useSingleRequestParameter=true"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest",
-      "plugin:cypress/recommended"
-    ]
+    "run-e2e-tests": "cypress run",
+    "start": "react-scripts start",
+    "test": "react-scripts test",
+    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache"
   },
   "browserslist": {
     "production": [
@@ -50,12 +25,43 @@
       "last 1 safari version"
     ]
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest",
+      "plugin:cypress/recommended"
+    ]
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
+  },
+  "dependencies": {
+    "axios": "^0.21.4",
+    "ra-data-json-server": "^4.12.2",
+    "ra-data-simple-rest": "^4.12.2",
+    "react": "^17.0.2",
+    "react-admin": "^4.12.3",
+    "react-dom": "^17.0.2",
+    "web-vitals": "^3.4.0"
+  },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@openapitools/openapi-generator-cli": "^2.7.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.2",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@types/react-router": "^5.1.20",
     "cypress": "^12.17.1",
     "cypress-localstorage-commands": "^2.2.3",
     "eslint-plugin-cypress": "^2.13.3",
-    "prettier": "^3.0.0"
+    "fork-ts-checker-webpack-plugin": "^6.5.3",
+    "prettier": "^3.0.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^5.1.6"
   }
 }
